# python-django-models-authentication

./: pyproject.toml
mainapp/: models.py  views.py
mainapp/migrations/: 0003_delete_blogpost_delete_tag.py  0004_initial.py  0005_tag_blogpost_tags.py
users/migrations/: 0001_initial.py
